entite model updated

--- a/DentalClinicReservationAndManagementSystem/Views/Home/TakeAppointment.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/TakeAppointment.cshtml
@@ -106,11 +106,11 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            @foreach (Dentist dentist in ViewBag.appointmentList2)
+                                            @foreach (DentalClinicReservationAndManagementSystem.Dentist dentist in ViewBag.appointmentList2)
                                             {
                                                 <tr>
                                                     <td>@dentist.Id</td>
-                                                    <td>@dentist.name</td>
+                                                    <td>@dentist.Name</td>
 
                                                 </tr>
                                             }
