--- a/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@using DentalClinicReservationAndManagementSystem.Models;
+@using DentalClinicReservationAndManagementSystem;
 @section Scripts {
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -124,7 +124,7 @@
                         <div class="staff">
                             <div class="img mb-4" style="background-image: url(../../Content/images/person_5.jpg);"></div>
                             <div class="info text-center">
-                                <h3><a href="teacher-single.html">@d.name</a></h3>
+                                <h3><a href="teacher-single.html">@d.Name</a></h3>
                                 <span class="position">Dentist</span>
                                 <div class="text">
                                     <p>@d.institute</p>
