--- a/DentalClinicReservationAndManagementSystem/Views/Home/AppointmentList.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/AppointmentList.cshtml
@@ -121,8 +121,8 @@
                             {
                                 <tr>
                                     <td>@appointment.Id</td>
-                                    <td>@appointment.patient_id</td>
-                                    <td>@appointment.datetime</td>
+                                    <td>@appointment.PatientId</td>
+                                    <td>@appointment.Datetime</td>
                                 </tr>
                             }
                         </tbody>
