--- a/DentalClinicReservationAndManagementSystem/Views/Home/MyAppointments.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/MyAppointments.cshtml
@@ -112,8 +112,8 @@
                         <thead>
                             <tr>
                                 <th>Appointment ID</th>
-                                <th>Dentist ID</th>
-                                <th>Time</th>
+                                <th>Reason For Appoinment</th>
+                                <th>Date & Time</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -121,8 +121,8 @@
                             {
                                 <tr>
                                     <td>@appointment.Id</td>
-                                    <td>@appointment.dentist_id</td>
-                                    <td>@appointment.datetime</td>
+                                    <td>@appointment.ReasonForAppointment</td>
+                                    <td>@appointment.PreferredDateTime</td>
                                 </tr>
                             }
                         </tbody>
