--- a/DentalClinicReservationAndManagementSystem/Content/css/style.css
+++ b/DentalClinicReservationAndManagementSystem/Content/css/style.css
@@ -7306,9 +7306,13 @@ h1, h2, h3, h4, h5,
   left: 0;
   right: 0;
   z-index: 3; }
+    .ftco-navbar-light .logo2 {
+        display: none;
+    }
   @media (min-width: 992px) {
     .ftco-navbar-light {
-      padding: 15px 0; } }
+      padding: 15px 0; }
+  }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
       background: #000 !important;
@@ -7321,7 +7325,8 @@ h1, h2, h3, h4, h5,
       font-weight: 700; }
     @media (min-width: 768px) {
       .ftco-navbar-light .navbar-brand {
-        color: #fff; } }
+        color: #fff; } 
+    }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav {
       padding-bottom: 20px; } }
@@ -7410,7 +7415,14 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #2f89fc !important; }
+      color: #2f89fc !important;
+    }
+    .ftco-navbar-light.scrolled .logo {
+        display:none;
+    }
+    .ftco-navbar-light.scrolled .logo2 {
+        display: inline;
+    }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
       background: #2f89fc;
