--- a/DentalClinicReservationAndManagementSystem/Views/Home/DentistLogin.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/DentistLogin.cshtml
@@ -1,4 +1,4 @@
-﻿@model DentalClinicReservationAndManagementSystem.Models.DentistLogin
+﻿@model DentalClinicReservationAndManagementSystem.Dentist
 @{
     ViewBag.Title = "DentistLogin";
     Layout = null;
@@ -25,7 +25,11 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-primary" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="@Html.ActionLink("Home", "Index", "Home")">Dental <span>Care</span></a>
+        <div class="text-left">
+        <a href="#home">
+            <img src="~/Content/images/logo3.png" alt="Logo" class="img-fluid" style="max-height: 120px;">
+        </a>
+    </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
@@ -54,17 +58,17 @@
                         <form class="form-signin">
                             <div class="form-label-group">
                                 <label>username</label><br />
-                                @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
+                                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                             </div>
                             <div class="form-label-group">
                                 <label>password</label><br />
-                                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                             </div>
-                            <div class="form-label-group text-danger">
-                                <label>@Html.DisplayFor(model => model.LoginErrorMessage)</label>
-                            </div>
+                            @*<div class="form-label-group text-danger">
+                                <label>@Html.DisplayFor(model => model.l)</label>
+                            </div>*@
                             <br /> <br />
                             <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
                             <hr class="my-4">
