--- a/DentalClinicReservationAndManagementSystem/Views/Home/PatientPanel.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/PatientPanel.cshtml
@@ -60,7 +60,7 @@
     <div class="wrapper ">
         <div class="sidebar" data-color="purple" data-background-color="white" data-image="~/Content/img/sidebar-1.jpg">
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+                <a href="" class="simple-text logo-normal">
                     Patient Panel <br />
                     @Session["LoggedPatientFullName"]
                 </a>
