--- a/DentalClinicReservationAndManagementSystem/Views/Home/DentistPanel.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/DentistPanel.cshtml
@@ -59,7 +59,7 @@
         <div class="sidebar" data-color="purple" data-background-color="white" data-image="~/Content/img/sidebar-1.jpg">
             <div class="logo">
                 <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-                    Dentist Panel <br />
+                   Welcome <br />
                     @Session["LoggedDentistFullName"]
                 </a>
             </div>
