--- a/DentalClinicReservationAndManagementSystem/Views/Home/PatientLogin.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/PatientLogin.cshtml
@@ -25,22 +25,25 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-primary" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="@Html.ActionLink("Home", "Index", "Home")">Dental <span>Care</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="oi oi-menu"></span> Menu
-        </button>
-
-        <div class="collapse navbar-collapse" id="ftco-nav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item nav-link"> @Html.ActionLink("Home", "Index", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item nav-link"> @Html.ActionLink("About", "About", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item nav-link"> @Html.ActionLink("Services", "Services", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item nav-link"> @Html.ActionLink("Dentists", "Dentists", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item cta nav-link"> @Html.ActionLink("Make an Appointment", "Index", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item cta nav-link"> @Html.ActionLink("Dentist Arena", "DentistLogin", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item cta nav-link"> @Html.ActionLink("Patient Arena", "DentistLogin", "Home", new { Style = "color:White" })</li>
-            </ul>
+        <div class="text-left">
+            <a href="#home">
+                <img src="~/Content/images/logo3.png" alt="Logo" class="img-fluid" style="max-height: 100px;">
+            </a>
         </div>
+    
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="oi oi-menu"></span> Menu
+    </button>
+    <div class="collapse navbar-collapse" id="ftco-nav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item nav-link"> @Html.ActionLink("Home", "Index", "Home", new { Style = "color:White" })</li>
+            <li class="nav-item nav-link"> @Html.ActionLink("About", "About", "Home", new { Style = "color:White" })</li>
+            <li class="nav-item nav-link"> @Html.ActionLink("Services", "Services", "Home", new { Style = "color:White" })</li>
+            <li class="nav-item nav-link"> @Html.ActionLink("Dentists", "Dentists", "Home", new { Style = "color:White" })</li>
+            <li class="nav-item cta nav-link"> @Html.ActionLink("Make an Appointment", "Index", "Home", new { Style = "color:White" })</li>
+            <li class="nav-item cta nav-link"> @Html.ActionLink("Patient Arena", "PatientLogin", "Home", new { Style = "color:White" })</li>
+        </ul>
+    </div>
     </div>
 </nav>
 
