--- a/DentalClinicReservationAndManagementSystem/Views/Home/PatientPanel.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/PatientPanel.cshtml
@@ -61,7 +61,7 @@
         <div class="sidebar" data-color="purple" data-background-color="white" data-image="~/Content/img/sidebar-1.jpg">
             <div class="logo">
                 <a href="" class="simple-text logo-normal">
-                    Patient Panel <br />
+                    Welcome <br />
                     @Session["LoggedPatientFullName"]
                 </a>
             </div>
