--- a/DentalClinicReservationAndManagementSystem/Views/Home/Dentists.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/Dentists.cshtml
@@ -1,7 +1,7 @@
-﻿@{
+﻿@*@{
     ViewBag.Title = "Dentists";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
+}*@
 @section Scripts {
     }
 <section class="ftco-section">
@@ -162,7 +162,7 @@
 </section>
 
 
-<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(../../Content/images/bg_1.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-section ftco-counter img" id="section-counter" data-stellar-background-ratio="0.5">
     <div class="container">
         <div class="row d-flex align-items-center">
             <div class="col-md-3 aside-stretch py-5">
