--- a/DentalClinicReservationAndManagementSystem/Views/Home/DentistLogin.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/DentistLogin.cshtml
@@ -1,91 +1,64 @@
 ﻿@model DentalClinicReservationAndManagementSystem.Dentist
 @{
-    ViewBag.Title = "DentistLogin";
-    Layout = null;
+    ViewBag.Title = "Dentist Login";
+    Layout = "~/Views/Shared/_Layout.cshtml"; // Ensure it uses the main layout
 }
-<head>
-    <title>@ViewBag.Title</title>
-    <meta charset="utf-8" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/open-iconic-bootstrap.min.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/animate.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/owl.carousel.min.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/owl.theme.default.min.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/magnific-popup.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/aos.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/ionicons.min.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/bootstrap-datepicker.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/jquery.timepicker.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/flaticon.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/icomoon.css")">
-    <link rel="stylesheet" href="@Url.Content("../../Content/css/style.css")">
-</head>
 
-<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-primary" id="ftco-navbar">
-    <div class="container">
-        <div class="text-left">
-        <a href="#home">
-            <img src="~/Content/images/logo3.png" alt="Logo" class="img-fluid" style="max-height: 100px;">
-        </a>
-    </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="oi oi-menu"></span> Menu
-        </button>
-        <div class="collapse navbar-collapse" id="ftco-nav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item nav-link"> @Html.ActionLink("Home", "Index", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item nav-link"> @Html.ActionLink("About", "About", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item nav-link"> @Html.ActionLink("Services", "Services", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item nav-link"> @Html.ActionLink("Dentists", "Dentists", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item cta nav-link"> @Html.ActionLink("Make an Appointment", "Index", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item cta nav-link"> @Html.ActionLink("Dentist Arena", "DentistLogin", "Home", new { Style = "color:White" })</li>
-                <li class="nav-item cta nav-link"> @Html.ActionLink("Patient Arena", "PatientLogin", "Home", new { Style = "color:White" })</li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-            <div class="card card-signin my-5">
+<div class="container d-flex justify-content-center align-items-center vh-80">
+    <div class="row justify-content-center w-100">
+        <div class="col-md-6 col-lg-5">
+            <!-- Increased width -->
+            <div class="card shadow-lg border-1 rounded-lg p-4">
+                <!-- Added padding -->
                 <div class="card-body">
-                    @using (Html.BeginForm("DentistLogin", "Home", FormMethod.Post))
+                    <div class="text-center mb-3">
+                        <h4 class="font-weight-bold text-primary">Dentist's Login</h4>
+                    </div>
+
+                    @using (Html.BeginForm("DentistLogin", "Home", FormMethod.Post, new { @class = "needs-validation", novalidate = "novalidate" }))
                     {
                         @Html.AntiForgeryToken()
-                        <h5 class="card-title text-center">Dentist's Login</h5>
-                        <form class="form-signin">
-                            <div class="form-label-group">
-                                <label>username</label><br />
-                                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+
+                        <div class="form-group">
+                            <label class="font-weight-bold">Username</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                </div>
+                                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control", placeholder = "Enter Username" } })
                             </div>
-                            <div class="form-label-group">
-                                <label>password</label><br />
-                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group">
+                            <label class="font-weight-bold">Password</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                </div>
+                                @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeholder = "Enter Password" })
                             </div>
-                            @*<div class="form-label-group text-danger">
-                                <label>@Html.DisplayFor(model => model.l)</label>
-                            </div>*@
-                            <br /> <br />
-                            <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
-                            <hr class="my-4">
-                        </form>
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>
+
+                        <button class="btn btn-primary btn-block rounded-pill py-2" type="submit">
+                            <i class="fas fa-sign-in-alt"></i> Sign in
+                        </button>
+
+                        <hr class="my-4">
+
+                        @*<div class="text-center">
+                            <a href="#" class="small text-primary">Forgot password?</a>
+                        </div>*@
                     }
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div>
-
-</div>
 
 @section Scripts {
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-   
-    <script src="../../Content/js/main.js"></script>
 }
