--- a/DentalClinicReservationAndManagementSystem/Views/Home/DentistPanel.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/DentistPanel.cshtml
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="@Url.Content("../../Content/css/icomoon.css")">
     <link rel="stylesheet" href="@Url.Content("../../Content/css/style.css")">
 </head>
-<body class="">
+<body class="" id="Adminhome">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-primary" id="ftco-navbar">
         <div class="container">
             <a class="navbar-brand" href="index.html">Dental <span>Care</span></a>
@@ -46,11 +46,8 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item nav-link"> @Html.ActionLink("Home", "Index", "Home", new { Style = "color:White" })</li>
-                    <li class="nav-item nav-link"> @Html.ActionLink("About", "About", "Home", new { Style = "color:White" })</li>
-                    <li class="nav-item nav-link"> @Html.ActionLink("Services", "Services", "Home", new { Style = "color:White" })</li>
-                    <li class="nav-item nav-link"> @Html.ActionLink("Dentists", "Dentists", "Home", new { Style = "color:White" })</li>
                     <li class="nav-item cta nav-link"> @Html.ActionLink("Logout", "Logout", "Home", new { Style = "color:White" })</li>
-                    
+
                 </ul>
             </div>
         </div>
@@ -58,8 +55,8 @@
     <div class="wrapper ">
         <div class="sidebar" data-color="purple" data-background-color="white" data-image="~/Content/img/sidebar-1.jpg">
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-                   Welcome <br />
+                <a href="#Adminhome" class="simple-text logo-normal">
+                    Welcome <br />
                     @Session["LoggedDentistFullName"]
                 </a>
             </div>
@@ -92,11 +89,12 @@
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="AppointmentList">
+                        <a class="nav-link" href="#" id="loadAppointments">
                             <i class="material-icons">notifications</i>
                             <p>Appointments</p>
                         </a>
                     </li>
+
                     <li class="nav-item ">
                         <a class="nav-link" href="CreatePrescription">
                             <i class="material-icons">language</i>
@@ -106,9 +104,13 @@
 
                 </ul>
             </div>
+
+
         </div>
-        
+
+        <div id="appointmentsContainer"></div>
     </div>
+
     <!--   Core JS Files   -->
     <script src="~/Content/js/core/jquery.min.js"></script>
     <script src="~/Content/js/core/popper.min.js"></script>
@@ -153,7 +155,7 @@
     <!-- Material Dashboard DEMO methods, don't include it in your project! -->
     <script src="~/Content/demo/demo.js"></script>
     <script>
-    $(document).ready(function () {
+        $(document).ready(function () {
             $().ready(function () {
                 $sidebar = $('.sidebar');
 
@@ -323,11 +325,28 @@
             });
         });</script>
     <script>
-    $(document).ready(function () {
+        $(document).ready(function () {
             // Javascript method's body can be found in assets/js/demos.js
             md.initDashboardPageCharts();
 
         });</script>
+    <script>
+    $(document).ready(function () {
+        $("#loadAppointments").click(function (e) {
+            e.preventDefault();
+            $.ajax({
+                url: '@Url.Action("LoadAppointments", "Dentist")',
+                type: 'GET',
+                success: function (data) {
+                    $("#appointmentsContainer").html(data);
+                },
+                error: function () {
+                    alert("Error loading appointments.");
+                }
+            });
+        });
+    });
+    </script>
 </body>
 </html>
 
