--- a/DentalClinicReservationAndManagementSystem/Views/Shared/_Layout.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Shared/_Layout.cshtml
@@ -181,9 +181,10 @@
         </div>
     </nav>
     <!-- END nav -->
-    <main role="main" class="container">
-        @RenderBody()
-    </main>
+    <main role="main" class="container-fluid">
+            @RenderBody()
+        </main>
+  
 
 
     <!-- loader -->
