--- a/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
@@ -1208,7 +1208,7 @@
 
 
                 document.addEventListener("DOMContentLoaded", function () {
-                    const teeth = document.querySelectorAll(".rating .fa-tooth");
+                    const teeth = document.querySelectorAll(".rating .fa-star");
                     const ratingInput = document.getElementById("ratingValue");
 
                     teeth.forEach(tooth => {
